--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
                 
                 <div class="logo">Header Logo</div>
                 <ul>
-                    <li><a>Home</a></li>
-                    <li><a>Packages</a></li>
-                    <li><a>Reviews</a></li>
+                    <li><a href="./pages/homepage.html">Home</a></li>
+                    <li><a href="./pages/packages.html">Packages</a></li>
+                    <li><a href="./pages/reviews.html">Reviews</a></li>
                 </ul>
                 
             </div>
